Tryingto fix weird sidescrolling on mobile

--- a/src/site/assets/main.css
+++ b/src/site/assets/main.css
@@ -5,6 +5,7 @@
 @layer base {
   body {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
 }
 
